--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.21.1",
     "expo": "~41.0.1",
     "expo-asset": "~8.3.1",
+    "expo-cli": "^4.5.2",
     "expo-constants": "~10.1.3",
     "expo-linear-gradient": "~9.1.0",
     "expo-location": "~12.0.4",
@@ -27,6 +28,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-animatable": "^1.3.3",
+    "react-native-elements": "^3.4.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-overlay": "^0.1.2",
     "react-native-linear-gradient": "^2.5.6",
@@ -39,6 +41,7 @@
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "^0.16.3",
     "react-navigation": "^4.4.4",
+    "react-query": "^3.16.1",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "styled-components": "^5.3.0"
   },
